# CPU-Free-model

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  _Makefile  common.mk  modules.sh
CG/: CMakeLists.txt  Makefile  Makefile2
CG/PETSc/: standard_cg.c
CG/batch/: _benchmark_runtime.sh  _load_A100_machine_modules.sh  _load_simula_modules.sh  _measure_operation_breakdown.sh  _measure_total_runtime.sh
CG/batch/A100-machine/: _load_A100-machine_modules.sh  _load_nvshmem.sh  _load_petsc.sh
CG/batch/Karolina/: _load_karolina_modules.sh  _measure_single_gpu_runtime.sh  _measure_total_runtime.sh
CG/batch/Simula/: _measure_operation_breakdown.sh  _measure_total_runtime.sh
CG/batch/Truba/: _load_truba_modules.sh  _measure_operation_breakdown.sh  _measure_total_runtime.sh
CG/include/: common.h  mmio.h
CG/include/baseline/: discrete-non-pipelined.cuh  discrete-pipelined-no-overlap.cuh  discrete-pipelined-nvshmem.cuh  discrete-pipelined.cuh  discrete-standard-nvshmem.cuh  discrete-standard.cuh  non-persistent-non-pipelined.cuh  non-persistent-pipelined.cuh  non-persistent-unified-memory-non-pipelined.cuh  non-persistent-unified-memory-pipelined.cuh  persistent-non-pipelined.cuh  persistent-standard.cuh  persistent-unified-memory-gather-vector.cuh  persistent-unified-memory-stale-device-vector.cuh  persistent-unified-memory.cuh
CG/include/profiling/: discrete-non-pipelined.cuh  discrete-pipelined.cuh  discrete-standard.cuh
CG/include/single-stream/: pipelined-gather.cuh  pipelined-multi-overlap.cuh  pipelined-nvshmem.cuh  pipelined.cuh  standard-saxpy-overlap.cuh  standard.cuh  unified-memory-pipelined.cuh
CG/include_nvshmem/: common.h
CG/include_nvshmem/baseline/: discrete-pipelined-nvshmem.cuh  discrete-standard-nvshmem.cuh  persistent-standard-nvshmem.cuh
CG/include_nvshmem/profiling/: discrete-pipelined-nvshmem.cuh  discrete-standard-nvshmem.cuh
CG/include_nvshmem/single-stream/: pipelined-gather-nvshmem.cuh  pipelined-multi-overlap.cuh  pipelined-nvshmem.cuh  standard-saxpy-overlap-nvshmem.cuh
CG/results/: cg_benchmark_4A100  cg_benchmark_4A100_NEW  cg_benchmark_4V100  cg_benchmark_4V100_NEW  cg_benchmark_8A100  cg_benchmark_8V100  cg_nvshmem_runtime-03-01-2023_21-21-49-A100.txt  cg_nvshmem_runtime-29-12-2022_18-30-41-A100.txt  cg_nvshmem_runtime-30-12-2022_12-40-18-A100.txt  cg_nvshmem_runtime-4A100.txt  cg_nvshmem_runtime-8A100.txt  cg_nvshmem_runtime_single_gpu-A100.csv  cg_operation_breakdown_1GPU.txt  cg_operation_breakdown_1V100.txt  cg_operation_breakdown_2GPU.txt  cg_operation_breakdown_2V100.txt  cg_operation_breakdown_3GPU.txt  cg_operation_breakdown_3V100.txt  cg_operation_breakdown_4A100.txt  cg_operation_breakdown_4GPU.txt  cg_operation_breakdown_4V100.txt  cg_operation_breakdown_5GPU.txt  cg_operation_breakdown_5V100.txt  cg_operation_breakdown_6GPU.txt  cg_operation_breakdown_6V100.txt  cg_operation_breakdown_7GPU.txt  cg_operation_breakdown_7V100.txt  cg_operation_breakdown_8A100.txt  cg_operation_breakdown_8A100_discrete_pipelined.csv  cg_operation_breakdown_8A100_discrete_standard.csv  cg_operation_breakdown_8GPU.txt  cg_operation_breakdown_8V100.txt  cg_runtime_8A100.csv  cg_runtime_single_gpu-A100.csv
CG/results/A100/: cg_operation_breakdown-10-08-2022_12-02-31.txt
CG/results/pipelined_speedup/: pipelined_cg_speedup_1 GPU.txt  pipelined_cg_speedup_2 GPUs.txt  pipelined_cg_speedup_3 GPUs.txt  pipelined_cg_speedup_4 GPUs.txt  pipelined_cg_speedup_5 GPUs.txt  pipelined_cg_speedup_6 GPUs.txt  pipelined_cg_speedup_7 GPUs.txt  pipelined_cg_speedup_8 GPUs.txt
CG/results/standard_speedup/: pipelined_cg_speedup_1 GPU.txt  pipelined_cg_speedup_2 GPUs.txt  pipelined_cg_speedup_3 GPUs.txt  pipelined_cg_speedup_4 GPUs.txt  pipelined_cg_speedup_5 GPUs.txt  pipelined_cg_speedup_6 GPUs.txt  pipelined_cg_speedup_7 GPUs.txt  pipelined_cg_speedup_8 GPUs.txt
CG/scripts/: calculate_nnz_num_rows_ratio.py  calculate_speedup.py  convert_mtx_to_petsc_binary_format.py  download_matrices.py  download_matrix.sh  measure_operation_breakdown.py  measure_operation_breakown.py  measure_runtime.py  measure_single_gpu_runtime.py  modules.sh  requirements.txt
CG/scripts/plots/: common.py  paper.mplstyle  plot_constant_num_gpus.py  plot_constant_num_gpus_petsc.py  plot_operation_breakdown.py  plot_strong_scaling.py  plot_strong_scaling_petsc.py
CG/src/: common.cu  main.cu  mmio.c  mmio_wrapper.cpp
CG/src/baseline/: discrete-non-pipelined.cu  discrete-pipelined-no-overlap.cu  discrete-pipelined-nvshmem.cu  discrete-pipelined.cu  discrete-standard-nvshmem.cu  discrete-standard.cu  non-persistent-non-pipelined.cu  non-persistent-pipelined.cu  non-persistent-unified-memory-non-pipelined.cu  non-persistent-unified-memory-pipelined.cu  persistent-non-pipelined.cu  persistent-standard.cu  persistent-unified-memory-gather-vector.cu  persistent-unified-memory-stale-device-vector.cu  persistent-unified-memory.cu
CG/src/profiling/: discrete-non-pipelined.cu  discrete-pipelined.cu  discrete-standard.cu
CG/src/single-gpu/: discrete-standard.cu
CG/src/single-stream/: pipelined-gather.cu  pipelined-multi-overlap.cu  pipelined-nvshmem.cu  pipelined.cu  standard-saxpy-overlap.cu  standard.cu  unified-memory-pipelined.cu
CG/src_nvshmem/: common.cu  main.cu  mmio.c  mmio_wrapper.cpp
CG/src_nvshmem/baseline/: discrete-pipelined-nvshmem.cu  discrete-standard-nvshmem.cu  persistent-standard-nvshmem.cu
CG/src_nvshmem/profiling/: discrete-pipelined-nvshmem.cu  (+3 more)
Stencil/jacobi2D/: CMakeLists.txt  Makefile
Stencil/jacobi3D/: CMakeLists.txt
jacobi3D/: .gitignore  CMakeLists.txt  Makefile
jacobi3D/include/: common.h
jacobi3D/include_nvshmem/: common.h
jacobi3D/results/: results_a100_weak_scale_3.txt  results_v100_eight_gpus.txt
jacobi3D/scripts/: modules_truba.sh  multi-node.sh  plot.py  requirements.txt  strong_scale_bench.sh  strong_scale_bench_truba.sh  weak_scale_bench.sh  weak_scale_bench_truba.sh  weak_scale_comm_bench_truba.sh  weak_scale_comp_bench_truba.sh
jacobi3D/src/: common.cu  main.cu
jacobi3D/src_nvshmem/: common.cu  main.cu
src/: main.cu  (+4 more)
(+553 files in other folders)
